<resources>
    <string name="app_name">cockwojażer</string>
    <string name="title">Problem Komiwojażera</string>
    <string name="description">
        Aplikacja implementuje rozwiązanie problemu Komiwojażera w celu wypisania najkrótszej trasypomiedzy podanymi przez użytkownika lub wygenerowanymi losowo miastami.
        By przejść dalej wybierz jedną z dwóch opcji poniżej</string>
    <string name="btnCustom">Wprowadź własne odległości i miasta</string>
    <string name="btnRandom">Użyj losowo wygenerowanych odległości</string>
    <string name="btnExit">Zamknij aplikację</string>
    <string-array name="cities">
        <item>Skurgwy</item>
        <item>Młotkowo</item>
        <item>Wielki Wór</item>
        <item>Swornegacie</item>
        <item>Chujmiętki</item>
        <item>Mała Wieś przy Drodze</item>
        <item>Małe swornegacie</item>
        <item>Bity Kamień</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter">Wprowadź swoją wartość tutaj</string>
    <string name="distance">Dodaj dystans</string>
    <string name="compute">Oblicz najkrótszą trasę</string>
    <string name="information">Tutaj pojawi się ścieżka oraz łączna ilość przebytch kilometrów</string>
    <string name="arrayInfo">Naciśnij by wyświetlić poniżej tablicę odległości</string>
    <string name="screenshoot">Naciśnij by wykonać zrzut ekranu</string>
    <string name="random">Wygeneruj losowy dystans</string>
    <string name="randomInfo">Wybierz z list powyżej miasto od którego chcesz poprowadzić odległość a potem naciśnij guzik poniżej by wygenerować losową odległość</string>
    <string name="goback">Kliknij by wrócić do menu</string>
</resources>