<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RandomActivity">

    <Spinner
        android:id="@+id/originS"
        android:layout_width="393dp"
        android:layout_height="55dp"
        android:background="#9A999A"
        android:entries="@array/cities"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Spinner
        android:id="@+id/destinationS"
        android:layout_width="393dp"
        android:layout_height="55dp"
        android:background="#9A999A"
        android:entries="@array/cities"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.158" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="390dp"
        android:layout_height="36dp"
        android:layout_marginBottom="1dp"
        android:rotation="-90"
        app:layout_constraintBottom_toTopOf="@+id/destinationS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/originS"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <Button
        android:id="@+id/dodajBtn"
        android:layout_width="263dp"
        android:layout_height="65dp"
        android:backgroundTint="#0B0B0B"
        android:text="@string/random"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.398"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.348" />

    <Button
        android:id="@+id/algoBtn"
        android:layout_width="279dp"
        android:layout_height="65dp"
        android:backgroundTint="#000000"
        android:text="@string/compute"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.582" />

    <TextView
        android:id="@+id/result"
        android:layout_width="335dp"
        android:layout_height="49dp"
        android:text="@string/information"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.763" />

    <Button
        android:id="@+id/button"
        android:layout_width="275dp"
        android:layout_height="81dp"
        android:backgroundTint="#000000"
        android:text="@string/screenshoot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.345"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.91" />

</androidx.constraintlayout.widget.ConstraintLayout>